[gd_scene load_steps=3 format=3 uid="uid://w8wk4l8i1m4g"]

[ext_resource type="Script" uid="uid://c8hva42x53u34" path="res://Game/UI/score_tracker.gd" id="1_4bvl0"]
[ext_resource type="Texture2D" uid="uid://bfpbefiagaejy" path="res://Assets/UI/Pike.png" id="2_fl16t"]

[node name="ScoreTracker" type="Node2D"]
script = ExtResource("1_4bvl0")

[node name="ScoreUp" type="Button" parent="."]
offset_left = 36.0
offset_top = 518.0
offset_right = 401.0
offset_bottom = 691.0
text = "SCORE +1"

[node name="Pike" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(1149, 504.75)
scale = Vector2(2, 6.50758)
texture = ExtResource("2_fl16t")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
position = Vector2(1142, 183)
polygon = PackedVector2Array(96, -363, 96, 542, -114, 542, -114, -376, -90, -376, -90, 531, 81, 531, 81, -363)

[node name="HeadSpawn" type="Marker2D" parent="."]
position = Vector2(1145, -157)

[node name="Label" type="Label" parent="."]
offset_left = 843.0
offset_top = 524.0
offset_right = 993.0
offset_bottom = 690.0
theme_override_font_sizes/font_size = 121
text = "0"

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="ScoreUp" to="." method="_on_score_up_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
